--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -28,12 +28,14 @@ import { Description } from '../components/description';
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+- ["5 things to know before Duke football attempts to take the Victory Bell back from North Carolina"](https://www.dukechronicle.com/article/2021/09/duke-football-north-carolina-victory-bell-holmberg-durant-bobo)
+  _September 30, 2021_
 - ["Students fined hundreds of dollars for not moving cars for football games, not excused for inability to pay"](https://www.dukechronicle.com/article/2021/09/duke-university-parking-transportation-services-blue-zone-lot-fine-football-games-permit-pass)
   _September 27, 2021_
 - ["More buck for your Brodhead: Students express frustration towards rising dining prices"](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
   _September 21, 2021_
-- ["5 things to know before Duke football's clash against Northwestern"](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-football-durant-holmberg-cutcliffe)
-  _September 15, 2021_
+- ["Extra point: Duke football holds on against Northwestern for stunning win"](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-extra-point)
+  _September 19, 2021_
 - ["X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters"](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
   _September 1, 2021_
 
