--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -20,9 +20,7 @@ import { Description } from '../components/description';
 # Research
 
 <Description>
-  My research interests currently lie in understanding substance use disorders
-  and mental illnesses. I have presented my work at a variety of science
-  competitions, and my work has been published in in various venues as well.
+  Below is a list of peer-reviewed papers that I've written.
 </Description>
 
 ## Peer-Reviewed Journal & Conference Publications
