--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -22,43 +22,33 @@ import { Description } from '../components/description';
 # Journalism
 
 <Description sx={{ em: { color: 'text', display: 'inline' } }}>
-  Below is a sample of news and opinion articles that I have published in
-  various venues.
+  Below is a selection of published articles that I've written.
 </Description>
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
-- ["5 things to know before Duke football attempts to take the Victory Bell back from North Carolina"](https://www.dukechronicle.com/article/2021/09/duke-football-north-carolina-victory-bell-holmberg-durant-bobo)
+- [Students fall ill, struggle to get help from HRL after finding mold in East Campus dorm rooms](https://www.dukechronicle.com/article/2021/11/duke-university-east-campus-dorms-pictures-mold-dirty-clean-maintenance)
+  _November 3, 2021_
+- [5 things to know before Duke football attempts to take the Victory Bell back from North Carolina](https://www.dukechronicle.com/article/2021/09/duke-football-north-carolina-victory-bell-holmberg-durant-bobo)
   _September 30, 2021_
-- ["Students fined hundreds of dollars for not moving cars for football games, not excused for inability to pay"](https://www.dukechronicle.com/article/2021/09/duke-university-parking-transportation-services-blue-zone-lot-fine-football-games-permit-pass)
+- [Students fined hundreds of dollars for not moving cars for football games, not excused for inability to pay](https://www.dukechronicle.com/article/2021/09/duke-university-parking-transportation-services-blue-zone-lot-fine-football-games-permit-pass)
   _September 27, 2021_
-- ["More buck for your Brodhead: Students express frustration towards rising dining prices"](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
+- [More buck for your Brodhead: Students express frustration towards rising dining prices](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
   _September 21, 2021_
-- ["Extra point: Duke football holds on against Northwestern for stunning win"](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-extra-point)
+- [Extra point: Duke football holds on against Northwestern for stunning win](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-extra-point)
   _September 19, 2021_
-- ["X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters"](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
+- [X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
   _September 1, 2021_
-
-## [The Vanguard](http://nehsjc.org/Vanguard)
-
-- ["Just Miles Away but Worlds Apart: Education in the Time of the Coronavirus"](http://www.nehsjc.org/Vanguard/headline-goes-here-14/)
-  _June 26, 2020_
-
-- ["Protests Spotlight First Amendment Right to Peaceable Assembly"](http://www.nehsjc.org/Vanguard/headline-goes-here-13/)
-  _June 25, 2020_
-
-- ["Changing World, Changing Journalism"](http://www.nehsjc.org/Vanguard/headline-goes-here-11/)
-  _June 24, 2020_
 
 ## [The Community Advocate](https://communityadvocate.com)
 
-- ["Mass. Academy of Math and Science student earns trip to international science fair"](https://www.communityadvocate.com/2020/07/15/mass-academy-of-math-and-science-student-earns-trip-to-international-science-fair/)
+- [Mass. Academy of Math and Science student earns trip to international science fair](https://www.communityadvocate.com/2020/07/15/mass-academy-of-math-and-science-student-earns-trip-to-international-science-fair/)
   _July 15, 2020_
-- ["Westborough’s youth hold protest for Black Lives Matter movement"](https://www.communityadvocate.com/2020/06/24/westboroughs-youth-hold-protest-for-black-lives-matter-movement/)
+- [Westborough’s youth hold protest for Black Lives Matter movement](https://www.communityadvocate.com/2020/06/24/westboroughs-youth-hold-protest-for-black-lives-matter-movement/)
   _June 24, 2020_
-- ["Westborough residents come together to hold peaceful vigil"](https://www.communityadvocate.com/2020/06/10/westborough-residents-come-together-to-hold-peaceful-vigil/)
+- [Westborough residents come together to hold peaceful vigil](https://www.communityadvocate.com/2020/06/10/westborough-residents-come-together-to-hold-peaceful-vigil/)
   _June 10, 2020_
-- ["A community comes together to celebrate on MLK Day in Westborough"](https://www.communityadvocate.com/2019/02/08/a-community-comes-together-to-celebrate-on-mlk-day-in-westborough/)
+- [A community comes together to celebrate on MLK Day in Westborough](https://www.communityadvocate.com/2019/02/08/a-community-comes-together-to-celebrate-on-mlk-day-in-westborough/)
   _February 8, 2019_
 
 </Container>
