--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -22,11 +22,13 @@ import { Description } from '../components/description';
 # Journalism
 
 <Description sx={{ em: { color: 'text', display: 'inline' } }}>
-  Below is a selection of published articles that I've written.
+  Below is a selection of my published articles.
 </Description>
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+- [Here’s how much Duke’s top administrators, athletics personnel made in the 2019 fiscal year](https://www.dukechronicle.com/article/2021/11/coach-k-salary-duke-university-administrator-salaries-vincent-price-president-executive)
+  _November 10, 2021_
 - [Students fall ill, struggle to get help from HRL after finding mold in East Campus dorm rooms](https://www.dukechronicle.com/article/2021/11/duke-university-east-campus-dorms-pictures-mold-dirty-clean-maintenance)
   _November 3, 2021_
 - [5 things to know before Duke football attempts to take the Victory Bell back from North Carolina](https://www.dukechronicle.com/article/2021/09/duke-football-north-carolina-victory-bell-holmberg-durant-bobo)
