--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -19,9 +19,7 @@ import { Description } from '../components/description';
 
 # Research
 
-<Description>
-  Below is a list of peer-reviewed papers that I've written.
-</Description>
+<Description>Below is a list of my peer-reviewed publications.</Description>
 
 ## Peer-Reviewed Journal & Conference Publications
 
