updated story list

--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -27,6 +27,10 @@ import { Description } from '../components/description';
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+- [Transportation staffing issue causes students to scramble to get to West Campus for final exams](https://www.dukechronicle.com/article/2021/12/duke-university-c1-bus-schedule-final-exam-schedule-late-policy-staffing-shortage)
+  _December 19, 2021_
+- [Students, faculty protest recently announced changes to Thompson Writing Program](https://www.dukechronicle.com/article/2021/12/duke-university-thompson-writing-program-faculty-union-protest-hiring)
+  _December 5, 2021_
 - [Here’s how much Duke’s top administrators, athletics personnel made in the 2019 fiscal year](https://www.dukechronicle.com/article/2021/11/coach-k-salary-duke-university-administrator-salaries-vincent-price-president-executive)
   _November 10, 2021_
 - [Students fall ill, struggle to get help from HRL after finding mold in East Campus dorm rooms](https://www.dukechronicle.com/article/2021/11/duke-university-east-campus-dorms-pictures-mold-dirty-clean-maintenance)
@@ -37,10 +41,6 @@ import { Description } from '../components/description';
   _September 27, 2021_
 - [More buck for your Brodhead: Students express frustration towards rising dining prices](https://www.dukechronicle.com/article/2021/09/duke-university-restaurants-wu-brodhead-center-cafeteria-dining-meal-plan-prices-pitchforks-expensive)
   _September 21, 2021_
-- [Extra point: Duke football holds on against Northwestern for stunning win](https://www.dukechronicle.com/article/2021/09/duke-football-northwestern-extra-point)
-  _September 19, 2021_
-- [X-Factor: Mataeo Durant's leadership will carry Duke offense through first-game jitters](https://www.dukechronicle.com/article/2021/09/duke-football-charlotte-x-factor-mataeo-durant-markees-watts)
-  _September 1, 2021_
 
 ## [The Community Advocate](https://communityadvocate.com)
 
