add supreme court

--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -27,6 +27,8 @@ import { Description } from '../components/description';
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+- [Duke economics professor's analysis to be used in Supreme Court's affirmative action case decision](https://www.dukechronicle.com/article/2022/01/harvard-unc-affirmative-action-case-race-admissions-peter-arcidiacano-david-card-expert-witness-duke-university)
+  _January 25, 2022_
 - [Transportation staffing issue causes students to scramble to get to West Campus for final exams](https://www.dukechronicle.com/article/2021/12/duke-university-c1-bus-schedule-final-exam-schedule-late-policy-staffing-shortage)
   _December 19, 2021_
 - [Students, faculty protest recently announced changes to Thompson Writing Program](https://www.dukechronicle.com/article/2021/12/duke-university-thompson-writing-program-faculty-union-protest-hiring)
