--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -23,11 +23,11 @@ import { Social } from '../components/social';
 
 I am a first-year undergraduate student at Duke University, studying statistical science, economics and sociology. I am also a [Huang Fellow](https://scienceandsociety.duke.edu/learn/undergraduate-programs/huang-fellows-program/) in the Duke Initiative for Science and Society.
 
-Broadly, I am interested in developing and using quantitative methods to learn about societies. I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior.
+Broadly, my research interests are in developing and using quantitative methods to learn about societies. I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior.
 
 My past research focused on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among different cohorts. I have studied opioid use disorder, suicidal ideation, and general substance use disorder among US adolescents and adults.
 
-Currently, my interests lie in harnessing the power of social media as a non-traditional data source—particularly as a type of "primary source" to computationally analyze current social and political events. I collected and analyzed Tweets to understand attacks on human rights defenders in Guatemala, Serbia, and Colombia at the Human Rights Institute of the University of Connecticut. I have also worked at the Duke Polarization Lab to build a "decency index" of nationally-elected politicians.
+Currently, I work on using social media as a non-traditional data source — particularly as a type of "primary source" — to computationally analyze current social and political events. I collected and analyzed Tweets to understand attacks on human rights defenders in Guatemala, Serbia, and Colombia at the Human Rights Institute of the University of Connecticut. I have also worked at the Duke Polarization Lab to build a "decency index" of nationally-elected politicians.
 
 Apart from my research, I'm passionate about journalism and am a sports enthusiast. At Duke, I cover university news for _The Chronicle_ and work as a data analyst for the men's basketball team. I previously wrote for the _Community Advocate_ and took archival photos while serving as the Photographer-in-Residence for the Town of Westborough.
 
