--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -28,6 +28,7 @@ import { Description } from '../components/description';
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
 - [‘Actively engaged in shutting us down’: Thompson Writing Program faculty continue fight for renewability](https://www.dukechronicle.com/article/2022/02/thompson-writing-program-duke-university-union-busting-labor-contracts-101-protest-faculty)
+  _February 11, 2022_
 - [Duke economics professor's analysis to be used in Supreme Court's affirmative action case decision](https://www.dukechronicle.com/article/2022/01/harvard-unc-affirmative-action-case-race-admissions-peter-arcidiacano-david-card-expert-witness-duke-university)
   _January 25, 2022_
 - [Transportation staffing issue causes students to scramble to get to West Campus for final exams](https://www.dukechronicle.com/article/2021/12/duke-university-c1-bus-schedule-final-exam-schedule-late-policy-staffing-shortage)
