--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -25,9 +25,7 @@ I am a rising sophomore at Duke University studying statistical science, economi
 
 I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior. Broadly, my research interests are in developing and using quantitative methods to learn about societies.
 
-Currently, I work on using social media data to computationally analyze current social and political events. I collected and analyzed Tweets to understand attacks on human rights defenders in Guatemala, Serbia and Colombia at the Human Rights Institute of the University of Connecticut. I am also working on a statistical science project at Duke that seeks to understand the role of survey weights within classifiers.
-
-My past research focused on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among different cohorts. I have studied opioid use disorder, suicidal ideation, and general substance use disorder among US adolescents and adults.
+Currently, I work on using social media data to computationally analyze current social and political events. I collected and analyzed Tweets to understand attacks on human rights defenders in Guatemala, Serbia and Colombia at the Human Rights Institute of the University of Connecticut. I am also working on a statistical science project at Duke that seeks to understand the role of survey weights within classifiers. My past research focused on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among various cohorts.
 
 At Duke, I am a university news editor for [_The Chronicle_](https://dukechronicle.com/staff/adway-s-wadekar), the university's independent news organization. I also have a passion for basketball and work as a social media and recruiting analyst for [Duke Men's Basketball](https://twitter.com/DukeMBB). I previously wrote for the _Community Advocate_ and took archival photos during my one-year term (cut short by COVID-19) as Westborough's [Photographer-in-Residence](https://www.instagram.com/thewestborougharchive/).
 
