--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -14,31 +14,31 @@ import { Description } from '../components/description';
     },
     li: {
       pb: 3
-    }
+    },
   }}>
 
 # Research
 
-<Description>Below is a list of my peer-reviewed publications.</Description>
+<Description>
+  Below is a list of my peer-reviewed publications and projects that I am
+  currently working on.
+</Description>
 
-## Peer-Reviewed Journal & Conference Publications
+## Current Projects
 
-1. A.S. Wadekar and B.K. Madras, "Association of Perceived Parental Attitudes Towards Substance Use and Offspring Use of Tobacco, Alcohol, Marijuana and Other Drugs,"
-   _Under Review_, 2020
+1. Incorporating survey weights within tree-based and other classification methods. [[proposal]](/papers/huang-05-22.pdf)
 
-2. A.S. Wadekar, "A Psychosocial Approach to Predicting Substance Use Disorder (SUD) Among Adolescents,"
-   _Proc. of the IEEE/ACM Intl. Conf. on Social Networks Analysis and Mining (ASONAM)_, pp. 819-826 (December 2020) [[pdf]](/papers/asonam-12-20.pdf) [[slides]](/papers/asonam-12-20-slides.pdf)
+   _Mentored by Prof. Jerome Reiter_
 
-3. A.S. Wadekar, "Understanding Opioid Use Disorder using tree-based classifiers,”
-   _Drug and Alcohol Dependence_ vol. 208 no. 107839 (March 2020) [[pdf]](/papers/dad-03-20.pdf)
+## Peer-Reviewed Journal & Conference Papers
 
-4. A.S. Wadekar, "Predicting Opioid Use Disorder (OUD) Using A Random Forest,"
-   _Proc. of IEEE Intl. Conf. on Computers, Software, and Applications (COMPSAC)_, pp. 960-961 (July 2019) [[pdf]](/papers/compsac-07-19.pdf)
+1. Wadekar, A.S. (2020). A psychosocial approach to predicting Substance Use Disorder (SUD) among adolescents. Proceedings of the IEEE/ACM International Conference on Social Networks Analysis and Mining, 819-826. [[pdf]](/papers/asonam-12-20.pdf) [[slides]](/papers/asonam-12-20-slides.pdf)
 
-5. “Predicting Suicidal Ideation using Decision Trees”
-   _Presented paper at the National Junior Science and Humanities Symposium_
+2. Wadekar, A.S. (2020). Understanding Opioid Use Disorder using tree-based classifiers. _Drug and Alcohol Dependence_, 208, 107839. [[pdf]](/papers/dad-03-20.pdf)
 
-6. A.S. Wadekar, "Grade-level participation in the AP curriculum,"
-   _Proc. of IEEE Integrated STEM Education Conference (ISEC)_, pp. 98-103 (March 2018) [[pdf]](/papers/isec-03-18.pdf)
+3. Wadekar, A.S. (2019). Predicting Opioid Use Disorder (OUD) using a random forest.
+   Proc. of IEEE Intl. Conf. on Computers, Software, and Applications (COMPSAC), pp. 960-961 [[pdf]](/papers/compsac-07-19.pdf)
+
+4. Wadekar, A.S. (2018). Grade-level participation in the AP curriculum. Proceedings of the IEEE Integrated STEM Education Conference, 98-103. [[pdf]](/papers/isec-03-18.pdf)
 
 </Container>
