add huang poster

--- a/pages/research.mdx
+++ b/pages/research.mdx
@@ -26,7 +26,7 @@ import { Description } from '../components/description';
 
 ## Current Projects
 
-1. Incorporating survey weights within tree-based and other classification methods. [[proposal]](/papers/huang-05-22.pdf)
+1. Using weights to improve the reliability of classification metrics with survey data. [[abstract]](/papers/huang-abstract.pdf) [[poster]](/papers/huang-poster.pdf)
 
    _Mentored by Prof. Jerome Reiter_
 
