--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -27,7 +27,9 @@ I have research and project experience in mining large, public- and private-doma
 
 Currently, I am working on a statistical science project at Duke that seeks to understand the role of survey weights within the context of complex classification tools. I also work on using social media data to computationally analyze current social and political events. I collected and analyzed Tweets to understand attacks on human rights defenders in Guatemala, Serbia and Colombia at the Human Rights Institute of the University of Connecticut. My past research focused on applying statistical techniques to uncover the origins of substance use disorders and mental illnesses among various cohorts.
 
-I have a strong interest in journalism; at Duke, I am a university news editor for [_The Chronicle_](https://dukechronicle.com/staff/adway-s-wadekar), the university's independent news organization. I am also an incoming copy editing intern at _Sports Illustrated_. I previously wrote for the _Community Advocate_ and took archival photos during my one-year term (cut short by COVID-19) as Westborough's [Photographer-in-Residence](https://www.instagram.com/thewestborougharchive/). I have a passion for basketball and work as a social media and recruiting analyst for [Duke Men's Basketball](https://twitter.com/DukeMBB).
+I have a strong interest in journalism. At Duke, I am a university news editor for [_The Chronicle_](https://dukechronicle.com/staff/adway-s-wadekar), the university's independent news organization. I previously wrote for the _Community Advocate_ and took archival photos during my one-year term (cut short by COVID-19) as Westborough's [Photographer-in-Residence](https://www.instagram.com/thewestborougharchive/).
+
+I have a passion for basketball and work as a social media and recruiting analyst for [Duke Men's Basketball](https://twitter.com/DukeMBB).
 
 </div>
 
