--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -29,7 +29,7 @@ Currently, I am working on a statistical science project at Duke that seeks to u
 
 I have a strong interest in journalism. At Duke, I am a university news editor for [_The Chronicle_](https://dukechronicle.com/staff/adway-s-wadekar), the university's independent news organization. I previously wrote for the _Community Advocate_ and took archival photos during my one-year term (cut short by COVID-19) as Westborough's [Photographer-in-Residence](https://www.instagram.com/thewestborougharchive/).
 
-I have a passion for basketball and work as a social media and recruiting analyst for [Duke Men's Basketball](https://twitter.com/DukeMBB).
+I have a passion for basketball and work as a creative intern/data analyst for [Duke Men's Basketball](https://twitter.com/DukeMBB).
 
 </div>
 
