--- a/pages/journalism.mdx
+++ b/pages/journalism.mdx
@@ -27,6 +27,8 @@ import { Description } from '../components/description';
 
 ## [The Chronicle](https://dukechronicle.com/staff/adway-s-wadekar)
 
+-['How loved she was': Peaches’ caretakers reflect on beloved calico cat’s legacy at Duke](https://www.dukechronicle.com/article/2022/08 duke-university-peaches-caretakers-reflect-legacy-campus-icon-death-struck-car)
+
 - [‘Actively engaged in shutting us down’: Thompson Writing Program faculty continue fight for renewability](https://www.dukechronicle.com/article/2022/02/thompson-writing-program-duke-university-union-busting-labor-contracts-101-protest-faculty)
 
   _February 11, 2022_
