--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -21,7 +21,7 @@ import { Social } from '../components/social';
 
 <div>
 
-I am a sophomore at Duke University studying economics, mathematics and sociology. I am also a [Huang Fellow](https://scienceandsociety.duke.edu/learn/undergraduate-programs/huang-fellows-program/profiles-of-huang-fellows/) in the Duke Initiative for Science and Society.
+I am a sophomore at Duke University studying mathematics, statistical science and economics. I am also a [Huang Fellow](https://scienceandsociety.duke.edu/learn/undergraduate-programs/huang-fellows-program/profiles-of-huang-fellows/) in the Duke Initiative for Science and Society.
 
 I have research and project experience in mining large, public- and private-domain data sets to understand various issues related to human behavior. Broadly, my research interests are in developing and using quantitative methods to learn about societies.
 
